# baseview

./: Cargo.toml
examples/: open_window.rs
src/: drag.rs  event.rs  lib.rs  mouse_cursor.rs  window.rs  window_open_options.rs
src/gl/: x11.rs
src/macos/: drag.rs  menu.rs  mod.rs  view.rs  window.rs
src/win/: data.rs  data_object.rs  drag.rs  drop_handler.rs  mod.rs  window.rs
src/x11/: cursor.rs  drag_handler.rs  drop_handler.rs  mod.rs  window.rs  xcb_connection.rs
